# project-timings

./: .gitignore  Cargo.toml  deploy.sh
idle-monitor/: Cargo.toml
idle-monitor/examples/: monitor_idle.rs
idle-monitor/src/: lib.rs
single-instance/: Cargo.toml
single-instance/examples/: single-instance.rs
single-instance/src/: lib.rs
timings/: Cargo.toml
timings-app/: Cargo.toml
timings-app/src/: gui_overlay.rs  gui_stats.rs  main.rs  overlay.rs
timings-app/src/utils/: mod.rs  run_debounced.rs  run_sync.rs
timings-egui/: Cargo.toml
timings-egui/src/: main.rs
timings-kde/: Cargo.toml
timings-kde/examples/: try_vdmanager.rs
timings-kde/src/: lib.rs
timings/examples/: dummy_run.rs
timings/src/: api.rs  error.rs  lib.rs  timings_recorder.rs  timings_recorder_shared.rs  totals_cache.rs
timings/src/repository/: mod.rs  timings_mockdata.rs  timings_mutations.rs  timings_queries.rs  utils.rs
timings/tests/: test_timing_recorder.rs
tray-icon/: Cargo.toml
tray-icon/examples/: try_tray_icon.rs
tray-icon/src/: dbus_menu.rs  error.rs  icon.rs  lib.rs  menubuilder.rs  status_notifier_item.rs  status_notifier_item_impl.rs  status_notifier_watcher.rs
virtual-desktops/: Cargo.toml
virtual-desktops/examples/: try_kdevdcontroller.rs  try_screen_saver.rs  try_vdmanager.rs
virtual-desktops/src/: api.rs  lib.rs
virtual-desktops/src/kde/: mod.rs  screen_saver.rs  virtual_desktop_manager.rs
