[package]
edition = "2024"
name = "timings-app"
description = ""
publish = false
version = "0.0.1"

[dependencies]
ksni = { version = "0.3.3", features = ["blocking"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5", features = ["derive"] }

virtual-desktops = { path = "../virtual-desktops" }
timings = { path = "../timings" }

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
futures = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.28"
env_logger = "0.11"
