[package]
edition = "2024"
name = "timings-app"
description = ""
publish = false
version = "0.0.1"

[dependencies]
trayicon = { git = "https://github.com/Ciantic/trayicon-rs", branch = "master" }
smithay-client-toolkit = "0.20.0"
egui = "0.33.3"
wayapp = { git = "https://github.com/Ciantic/wayapp", branch = "main" }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5", features = ["derive"] }

single-instance = { path = "../single-instance" }
virtual-desktops = { path = "../virtual-desktops" }
idle-monitor = { path = "../idle-monitor" }
timings = { path = "../timings" }

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
futures = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.29"
env_logger = "0.11"

# Debugging and profiling
hotpath = "0.9"

[features]
hotpath = ["hotpath/hotpath", "hotpath/hotpath-alloc"]
