[package]
name = "timings-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
# timings = { path = "../timings" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
eframe = { version = "0.33" }
futures = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.28"
