[package]
name = "timings"
version = "0.1.0"
edition = "2024"

[lib]
name = "timings"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
futures = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
const_format = { version = "0.2.35", features = ["rust_1_64"] }
log = "0.4.29"
parking_lot = "0.12.5"
