[package]
name = "tray-icon"
version = "0.1.0"
edition = "2024"

[lib]
name = "tray_icon"
path = "src/lib.rs"

[dependencies]
futures = "0.3.31"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
zbus = "5.13"
zbus_macros = "5.13"
zvariant = "5.9"
