[package]
name = "virtual-desktops"
version = "0.1.0"
edition = "2024"

[lib]
name = "virtual_desktops"
path = "src/lib.rs"

[dependencies]
futures = "0.3.31"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
zbus = "5.12"
zbus_macros = "5.12"
zvariant = "5.8.0"
